Release xx.aa
1. ManualRingback support (Benni A. Aswin)
2. Gateway/Endpoint config
3.
        
Release 0.7.3
1. Added H.245 based alphanumeric and signal DTMF support.
2. Added DTMF support using Q.931 based keypad information element.
3. Improved UsersGuide, with example of interaction between stack and
   application program.
4. Few minor bug fixes.
        
Release 0.7.2
1. Interop issues with Xener gateway and couple of Cisco devices solved.
2. Bearer capability IE changed to use PacketMode
3. Support for binding to multiple interfaces.
4. Support for NULL type encoded as zero length element.
5. Support for handling faststart response received in CallProceeding/alerting
   messages.
6. Tracing of CalledPartyNumber, CallingPartyNumber, BearerCapability,
   FastStart elements.
7. Bug causing crash fixed in ooCapability.c when symmetric capability is
   received.
8. Other small bug fixes and performance improvement.


Release 0.7.1
1. Bug fixes and fix for CISCO gateway interop issue.

Release 0.7
1. Added support for G711 alaw, G729, G729a, G723.1, GSM, H.263 codecs
2. Better callback support. Two levels of callbacks, viz., at call level
   (examples onIncomingCall, onCallEstablished, onCallCleared) and at message
   level(examples onReceivedSetup, onBuiltSetup). The call level callbacks
   provide applications high level call events where as message level callbacks
   allow applications to do finer things like additional processing of incoming
   messages or modify outgoing messages before they are sent.
3. Improved sample telephony application.
4. Support for Call Forward using Facility UUIE.
5. Improved documentation.
6. Code improvement and bug fixes.
        
Release 0.6
1. Added support for timers for various messages.
2. Added support for various Reject/Release messages.
3. RAS layer functionality changed to create a more modular gatekeeper client.
4. Code refactoring for better design and performance.
5. Improved capability creation and management code.